adding fluid transition with ajax

--- a/documents.html
+++ b/documents.html
@@ -17,75 +17,78 @@
         <!-- Hidden Subtitle for this page -->
         <p id="page-subtitle-main" style="display: none;">Manage Documents</p>
 
-         <div id="errorMessage" class="alert alert-danger d-none mt-4" role="alert"></div> <!-- Added mt-4 -->
-         <div id="successMessage" class="alert alert-success d-none mt-4" role="alert"></div> <!-- Added mt-4 -->
+        <!-- Main Content Area -->
+        <main id="main-content">
+             <div id="errorMessage" class="alert alert-danger d-none mt-4" role="alert"></div> <!-- Added mt-4 -->
+             <div id="successMessage" class="alert alert-success d-none mt-4" role="alert"></div> <!-- Added mt-4 -->
 
-        <div class="card mb-4 mt-4"> <!-- Added mt-4 -->
-            <div class="card-header">Select Facility</div>
-            <div class="card-body">
-                 <label for="facilitySelect" class="form-label">Select a facility to manage its documents:</label>
-                 <select class="form-select" id="facilitySelect">
-                     <option selected disabled value="">-- Select a Facility --</option>
-                     <option value="ALL">-- All Facilities --</option> <!-- Added All Facilities Option -->
-                     <!-- Facility options will be loaded here by JavaScript -->
-                 </select>
+            <div class="card mb-4 mt-4"> <!-- Added mt-4 -->
+                <div class="card-header">Select Facility</div>
+                <div class="card-body">
+                     <label for="facilitySelect" class="form-label">Select a facility to manage its documents:</label>
+                     <select class="form-select" id="facilitySelect">
+                         <option selected disabled value="">-- Select a Facility --</option>
+                         <option value="ALL">-- All Facilities --</option> <!-- Added All Facilities Option -->
+                         <!-- Facility options will be loaded here by JavaScript -->
+                     </select>
+                </div>
             </div>
-        </div>
 
-        <!-- Document Management Section (Initially hidden/disabled) -->
-        <div id="documentManagementSection" class="d-none">
-             <h4 id="selectedFacilityName">Documents for: </h4>
-             <hr>
-             <!-- Associated Documents Card -->
-             <div class="card mb-3">
-                 <div class="card-header">Associated Documents</div>
-                 <div class="card-body">
-                     <div class="mb-3">
-                         <label for="documentUploadInput" class="form-label">Upload New Document</label>
-                         <div class="input-group">
-                              <input type="file" class="form-control" id="documentUploadInput" aria-describedby="uploadDocumentButton">
-                              <button class="btn btn-outline-secondary" type="button" id="uploadDocumentButton"><i class="fas fa-upload"></i> Upload</button>
+            <!-- Document Management Section (Initially hidden/disabled) -->
+            <div id="documentManagementSection" class="d-none">
+                 <h4 id="selectedFacilityName">Documents for: </h4>
+                 <hr>
+                 <!-- Associated Documents Card -->
+                 <div class="card mb-3">
+                     <div class="card-header">Associated Documents</div>
+                     <div class="card-body">
+                         <div class="mb-3">
+                             <label for="documentUploadInput" class="form-label">Upload New Document</label>
+                             <div class="input-group">
+                                  <input type="file" class="form-control" id="documentUploadInput" aria-describedby="uploadDocumentButton">
+                                  <button class="btn btn-outline-secondary" type="button" id="uploadDocumentButton"><i class="fas fa-upload"></i> Upload</button>
+                             </div>
+                              <div id="uploadStatusMessage" class="form-text mt-1"></div> <!-- For upload feedback -->
                          </div>
-                          <div id="uploadStatusMessage" class="form-text mt-1"></div> <!-- For upload feedback -->
+
+                         <hr> <!-- Separator between upload and add link -->
+
+                         <div class="mb-3">
+                              <label class="form-label">Add Website Link</label>
+                              <div class="input-group mb-2">
+                                  <span class="input-group-text"><i class="fas fa-link"></i></span>
+                                  <input type="url" class="form-control" id="linkUrlInput" placeholder="https://example.com" required>
+                              </div>
+                              <div class="input-group">
+                                  <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                  <input type="text" class="form-control" id="linkDescriptionInput" placeholder="Link Description (e.g., Company Website, News Article)" required>
+                                  <button class="btn btn-outline-secondary" type="button" id="addLinkButton"><i class="fas fa-plus"></i> Add Link</button>
+                              </div>
+                              <div id="addLinkStatusMessage" class="form-text mt-1"></div> <!-- For add link feedback -->
+                         </div>
+
+                         <hr>
+
+                         <h5>Associated Items (Files & Links)</h5> <!-- Changed heading -->
+                         <ul class="list-group" id="documentList">
+                             <!-- Document links will be loaded here by JavaScript -->
+                             <li class="list-group-item text-muted" id="noDocumentsMessage">Select a facility to see its documents.</li>
+                         </ul>
                      </div>
-
-                     <hr> <!-- Separator between upload and add link -->
-
-                     <div class="mb-3">
-                          <label class="form-label">Add Website Link</label>
-                          <div class="input-group mb-2">
-                              <span class="input-group-text"><i class="fas fa-link"></i></span>
-                              <input type="url" class="form-control" id="linkUrlInput" placeholder="https://example.com" required>
-                          </div>
-                          <div class="input-group">
-                              <span class="input-group-text"><i class="fas fa-tag"></i></span>
-                              <input type="text" class="form-control" id="linkDescriptionInput" placeholder="Link Description (e.g., Company Website, News Article)" required>
-                              <button class="btn btn-outline-secondary" type="button" id="addLinkButton"><i class="fas fa-plus"></i> Add Link</button>
-                          </div>
-                          <div id="addLinkStatusMessage" class="form-text mt-1"></div> <!-- For add link feedback -->
-                     </div>
-
-                     <hr>
-
-                     <h5>Associated Items (Files & Links)</h5> <!-- Changed heading -->
-                     <ul class="list-group" id="documentList">
-                         <!-- Document links will be loaded here by JavaScript -->
-                         <li class="list-group-item text-muted" id="noDocumentsMessage">Select a facility to see its documents.</li>
-                     </ul>
                  </div>
-             </div>
-             <!-- End Associated Documents Card -->
-        </div>
-        <!-- End Document Management Section -->
+                 <!-- End Associated Documents Card -->
+            </div>
+            <!-- End Document Management Section -->
+        </main> <!-- End Main Content Area -->
 
     </div> <!-- End dashboard-container -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
-    <script src="js/common.js"></script>
     <!-- Custom Documents Page JS -->
-    <script src="js/documents.js"></script> <!-- Link to new JS file -->
+    <script src="js/documents.js" data-page-script="true"></script> <!-- Link to new JS file -->
+    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
+    <script src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 </body>
