--- a/about.html
+++ b/about.html
@@ -22,51 +22,53 @@
         <p id="page-subtitle-main" style="display: none;">About the Project</p>
 
         <!-- Main Content Area -->
-        <div class="container mt-4"> <!-- Added container and mt-4 -->
-            <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2 class="card-title">About This Project</h2>
-                            <p>This dashboard provides an interactive overview of lithium battery recycling facilities across North America. It aims to consolidate information about facility locations, operational status, processing capacities, and more.</p>
-                            <p>[Add more detailed project description here...]</p>
+        <main id="main-content">
+            <div class="container mt-4"> <!-- Added container and mt-4 -->
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">About This Project</h2>
+                                <p>This dashboard provides an interactive overview of lithium battery recycling facilities across North America. It aims to consolidate information about facility locations, operational status, processing capacities, and more.</p>
+                                <p>[Add more detailed project description here...]</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row mt-4">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2 class="card-title">Data Sources</h2>
-                            <p>The data presented in this dashboard is compiled from various public sources, including company press releases, government reports, and industry publications.</p>
-                            <ul>
-                                <li>[List specific data sources here, e.g., EPA reports, company websites]</li>
-                                <li>[Mention data update frequency or limitations if applicable]</li>
-                            </ul>
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">Data Sources</h2>
+                                <p>The data presented in this dashboard is compiled from various public sources, including company press releases, government reports, and industry publications.</p>
+                                <ul>
+                                    <li>[List specific data sources here, e.g., EPA reports, company websites]</li>
+                                    <li>[Mention data update frequency or limitations if applicable]</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row mt-4 mb-4">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2 class="card-title">Development Team</h2>
-                            <p>This project was developed by:</p>
-                            <ul>
-                                <li>[Team Member 1 Name/Role]</li>
-                                <li>[Team Member 2 Name/Role]</li>
-                                <li>[Add more team members as needed]</li>
-                            </ul>
-                            <p>[Optionally add links to profiles or contact info]</p>
+                <div class="row mt-4 mb-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">Development Team</h2>
+                                <p>This project was developed by:</p>
+                                <ul>
+                                    <li>[Team Member 1 Name/Role]</li>
+                                    <li>[Team Member 2 Name/Role]</li>
+                                    <li>[Add more team members as needed]</li>
+                                </ul>
+                                <p>[Optionally add links to profiles or contact info]</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div> <!-- End Main Content Area -->
+            </div> <!-- End container -->
+        </main> <!-- End Main Content Area -->
 
     </div> <!-- End dashboard-container -->
 
@@ -76,11 +78,11 @@
     <!-- Chart.js (Keep if needed for future charts on this page, remove otherwise) -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
 
-    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
-    <script src="js/common.js"></script>
-
     <!-- Custom JS (If needed for this specific page) -->
     <!-- <script src="js/about-page.js"></script> -->
+
+    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
+    <script src="js/common.js"></script>
 
     <!-- Removed inline script block -->
 </body>
