--- a/charts.html
+++ b/charts.html
@@ -19,91 +19,94 @@
         <!-- Hidden Subtitle for this page -->
         <p id="page-subtitle-main" style="display: none;">Charts & Stats</p>
 
-        <!-- Stats Cards Row -->
-        <div class="row mb-4 mt-4"> <!-- Added mt-4 for spacing -->
-            <div class="col-md-3">
-                <div class="stats-card text-center">
-                    <div class="icon text-primary">
-                        <i class="fas fa-industry"></i>
+        <!-- Main Content Area -->
+        <main id="main-content">
+            <!-- Stats Cards Row -->
+            <div class="row mb-4 mt-4"> <!-- Added mt-4 for spacing -->
+                <div class="col-md-3">
+                    <div class="stats-card text-center">
+                        <div class="icon text-primary">
+                            <i class="fas fa-industry"></i>
+                        </div>
+                        <div class="number total-facilities">--</div>
+                        <div class="label">Total Facilities</div>
                     </div>
-                    <div class="number total-facilities">--</div>
-                    <div class="label">Total Facilities</div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card text-center">
+                        <div class="icon text-success">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="number operating-facilities">--</div>
+                        <div class="label">Operating</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card text-center">
+                        <div class="icon text-warning">
+                            <i class="fas fa-hard-hat"></i>
+                        </div>
+                        <div class="number construction-facilities">--</div>
+                        <div class="label">Under Construction</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card text-center">
+                        <div class="icon text-info">
+                            <i class="fas fa-clipboard-list"></i>
+                        </div>
+                        <div class="number planned-facilities">--</div>
+                        <div class="label">Planned</div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="stats-card text-center">
-                    <div class="icon text-success">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                    <div class="number operating-facilities">--</div>
-                    <div class="label">Operating</div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="stats-card text-center">
-                    <div class="icon text-warning">
-                        <i class="fas fa-hard-hat"></i>
-                    </div>
-                    <div class="number construction-facilities">--</div>
-                    <div class="label">Under Construction</div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="stats-card text-center">
-                    <div class="icon text-info">
-                        <i class="fas fa-clipboard-list"></i>
-                    </div>
-                    <div class="number planned-facilities">--</div>
-                    <div class="label">Planned</div>
-                </div>
-            </div>
-        </div>
 
-        <!-- Charts Row -->
-         <div class="row mb-4">
-             <div class="col-md-12">
-                 <div class="card">
-                     <div class="card-header">
-                         <h5>Capacity by Status (tonnes per year)</h5>
-                     </div>
-                     <div class="card-body">
-                         <canvas id="capacityChart"></canvas>
+            <!-- Charts Row -->
+             <div class="row mb-4">
+                 <div class="col-md-12">
+                     <div class="card">
+                         <div class="card-header">
+                             <h5>Capacity by Status (tonnes per year)</h5>
+                         </div>
+                         <div class="card-body">
+                             <canvas id="capacityChart"></canvas>
+                         </div>
                      </div>
                  </div>
-             </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h5>Recycling Technologies Distribution</h5>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Recycling Technologies Distribution</h5>
+                        </div>
+                        <div class="card-body">
+                            <canvas id="technologiesChart"></canvas>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <canvas id="technologiesChart"></canvas>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Geographic Distribution</h5>
+                        </div>
+                        <div class="card-body">
+                            <canvas id="regionsChart"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h5>Geographic Distribution</h5>
-                    </div>
-                    <div class="card-body">
-                        <canvas id="regionsChart"></canvas>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </main> <!-- End Main Content Area -->
     </div> <!-- End dashboard-container -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
-    <script src="js/common.js"></script>
     <!-- Custom Charts Page JS -->
-    <script src="js/charts-page.js"></script>
+    <script src="js/charts-page.js" data-page-script="true"></script>
+    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
+    <script src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 </body>
