--- a/facilities.html
+++ b/facilities.html
@@ -19,38 +19,41 @@
         <!-- Hidden Subtitle for this page -->
         <p id="page-subtitle-main" style="display: none;">Facilities List</p>
 
-        <!-- Facilities List Section -->
-        <div class="row mt-4"> <!-- Added mt-4 for spacing after header -->
-            <div class="col-12">
-                 <div class="facilities-list" style="max-height: none; overflow-y: visible;"> <!-- Adjust style if needed -->
-                    <div class="tabs-container">
-                        <button class="tab-button active" data-filter="all">All</button>
-                        <button class="tab-button" data-filter="operating">Operating</button>
-                        <button class="tab-button" data-filter="construction">Construction</button>
-                        <button class="tab-button" data-filter="planned">Planned</button>
-                    </div>
+        <!-- Main Content Area -->
+        <main id="main-content">
+            <!-- Facilities List Section -->
+            <div class="row mt-4"> <!-- Added mt-4 for spacing after header -->
+                <div class="col-12">
+                     <div class="facilities-list" style="max-height: none; overflow-y: visible;"> <!-- Adjust style if needed -->
+                        <div class="tabs-container">
+                            <button class="tab-button active" data-filter="all">All</button>
+                            <button class="tab-button" data-filter="operating">Operating</button>
+                            <button class="tab-button" data-filter="construction">Construction</button>
+                            <button class="tab-button" data-filter="planned">Planned</button>
+                        </div>
 
-                    <div class="input-group mb-3">
-                        <span class="input-group-text"><i class="fas fa-search"></i></span>
-                        <input type="text" class="form-control" id="facilitySearch" placeholder="Search facilities...">
-                    </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text"><i class="fas fa-search"></i></span>
+                            <input type="text" class="form-control" id="facilitySearch" placeholder="Search facilities...">
+                        </div>
 
-                    <div id="facilitiesList">
-                        <!-- Facility items will be loaded here by JavaScript -->
-                        <p class="text-center text-muted">Loading facilities...</p>
+                        <div id="facilitiesList">
+                            <!-- Facility items will be loaded here by JavaScript -->
+                            <p class="text-center text-muted">Loading facilities...</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </main> <!-- End Main Content Area -->
 
     </div> <!-- End dashboard-container -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
-    <script src="js/common.js"></script>
     <!-- Custom Facilities Page JS -->
-    <script src="js/facilities-page.js"></script>
+    <script src="js/facilities-page.js" data-page-script="true"></script>
+    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
+    <script src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 </body>
