--- a/documents.html
+++ b/documents.html
@@ -91,5 +91,8 @@
     <script src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
+
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
