--- a/edit-facility.html
+++ b/edit-facility.html
@@ -182,5 +182,7 @@
     <!-- Custom Edit Page JS -->
     <script src="js/edit-facility.js"></script>
 
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
