--- a/index.html
+++ b/index.html
@@ -92,5 +92,8 @@
     <script src="js/common.js"></script>
 
     <!-- Removed inline script block -->
+
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
