--- a/login.html
+++ b/login.html
@@ -98,5 +98,8 @@
             }
         });
     </script>
+
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
