--- a/about.html
+++ b/about.html
@@ -85,5 +85,8 @@
     <script src="js/common.js"></script>
 
     <!-- Removed inline script block -->
+
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
