--- a/charts.html
+++ b/charts.html
@@ -109,5 +109,8 @@
     <script src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
+
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 </body>
 </html>
